fix: change webcam display to contain fit to show full uncropped field of view on desktop

--- a/css/frame.css
+++ b/css/frame.css
@@ -13,7 +13,7 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    object-fit: cover;
+    object-fit: contain;
     transform: scaleX(-1);
 }
 
